components/tools/listPage/ToolCard/ToolCard.module.css
.toolCardWrapper {
    display: flex;
    width: 100%;
    margin: 0 0 30px 0;
    padding: 0;
}

.votes {
    background-color: #26415b;
    border-radius: 6px 0 0 6px;
    padding: 15px 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
}

.info {
    flex-grow: 1;
    flex-basis: 0;
    padding: 15px;
}

.clickOut {
    background-color: #3c6993;
    width: 80px;
    background-image: url('/assets/icons/general/chevron.png');
    background-repeat: no-repeat;
    background-position: center;
    opacity: 0.5;
}

.clickOut:hover {
    opacity: 1;
    cursor: pointer;
}

.description {
    margin: 16px 0;
    font-size: 14px;
    overflow-wrap: anywhere;
}

.description p {
    line-height: 22px;
}

.toolMeta {
    margin: 20px 0 0 0;
    padding: 0;
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    column-gap: 20px;
    row-gap: 10px;
    font-size: 13px;
}

.metaInfo {
    padding: 0 0 0 5px;
    vertical-align: top;
}

.toolLink {
    text-underline-offset: 4px;
    text-decoration: underline;
}

.toolType {
    margin: 0 10px 0 0;
}

.toolName {
    display: inline;
    vertical-align: top;
    padding-right: 5px;
}

.languageLink {
    padding: 0 0 0 5px;
    vertical-align: top;
    font-size: 13px !important;
    color: #ffffff;
}

